--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -1,27 +1,12 @@
 body {
     background: #bde0ea;
+    font-size: 15px;
 }
 
 .mt-50 {
     margin-top: 50px;
 }
 
-.btn-file {
-    position: relative;
-    overflow: hidden;
-}
-.btn-file input[type=file] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 100px;
-    text-align: right;
-    filter: alpha(opacity=0);
-    opacity: 0;
-    outline: none;
-    background: white;
-    cursor: inherit;
-    display: block;
+.col-md-6 {
+    margin-top: 30px;
 }
